crates/ruff_python_parser/tests/snapshots/invalid_syntax@dotted_name_multiple_dots.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/dotted_name_multiple_dots.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..25,
        body: [
            Import(
                StmtImport {
                    node_index: NodeIndex(None),
                    range: 0..11,
                    names: [
                        Alias {
                            end: 11,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("a..b"),
                                range: 7..11,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    is_lazy: false,
                },
            ),
            Import(
                StmtImport {
                    node_index: NodeIndex(None),
                    range: 12..20,
                    names: [
                        Alias {
                            end: 20,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("a"),
                                range: 19..20,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    is_lazy: false,
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 20..23,
                    value: EllipsisLiteral(
                        ExprEllipsisLiteral {
                            node_index: NodeIndex(None),
                            range: 20..23,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 23..24,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 23..24,
                            id: Name("b"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | import a..b
  |          ^ Syntax Error: Expected an identifier
2 | import a...b
  |


  |
1 | import a..b
2 | import a...b
  |         ^^^ Syntax Error: Simple statements must be separated by newlines or semicolons
  |


  |
1 | import a..b
2 | import a...b
  |            ^ Syntax Error: Simple statements must be separated by newlines or semicolons
  |
